--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^9.5.2",
     "react-on-screen": "^2.1.1",
     "react-scripts": "3.4.1",
     "react-visibility-sensor": "^5.1.1"
